--- a/src/main/resources/org/openjfx/primary.fxml
+++ b/src/main/resources/org/openjfx/primary.fxml
@@ -6,6 +6,7 @@
 <?import javafx.geometry.Insets?>
 
 <?import org.openjfx.MyChart?>
+<?import org.openjfx.MyHeader?>
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.PrimaryController">
    <children>
       <MyChart/>
